src/parser/ql-parser.ts
// tslint:disable:quotemark

// Generated by PEG.js v. 0.10.0 (ts-pegjs plugin v. 0.1.13 )
//
// https://pegjs.org/   https://github.com/metadevpro/ts-pegjs

"use strict";

/* tslint:disable */ 
 import * as ast from '../app/domain/ast/ql';
export class SyntaxError extends Error {
  public static buildMessage(expected: string, found: string) {
    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map((part) => {
          return Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part);
        });

        return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
      },

      any(): string {
        return "any character";
      },

      end(): string {
        return "end of input";
      },

      other(expectation): string {
        return expectation.description;
      }
    };

    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected1) {
      const descriptions = expected1.map(describeExpectation);
      let i;
      let j;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: string;
  public found: string;
  public location: any;
  public name: string;

  constructor(message: string, expected: string, found: string, location) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};

  const peg$startRuleFunctions = { form: peg$parseform };
  let peg$startRuleFunction = peg$parseform;

  const peg$c0 = "form";
  const peg$c1 = peg$literalExpectation("form", false);
  const peg$c2 = "{";
  const peg$c3 = peg$literalExpectation("{", false);
  const peg$c4 = "}";
  const peg$c5 = peg$literalExpectation("}", false);
  const peg$c6 = function(name, statements) {
                    return new ast.Form(name, statements, location());
                  };
  const peg$c7 = "if";
  const peg$c8 = peg$literalExpectation("if", false);
  const peg$c9 = "(";
  const peg$c10 = peg$literalExpectation("(", false);
  const peg$c11 = ")";
  const peg$c12 = peg$literalExpectation(")", false);
  const peg$c13 = function(condition, statements) {
                      return new ast.If(condition, statements, [], location());
                    };
  const peg$c14 = "else";
  const peg$c15 = peg$literalExpectation("else", false);
  const peg$c16 = function(condition, statements, elseStatements) {
                      return new ast.If(condition, statements, elseStatements, location());
                    };
  const peg$c17 = ":";
  const peg$c18 = peg$literalExpectation(":", false);
  const peg$c19 = "\"";
  const peg$c20 = peg$literalExpectation("\"", false);
  const peg$c21 = function(name, label, type) {
                      return new ast.QlQuestion(name, label, type, location());
                    };
  const peg$c22 = "=";
  const peg$c23 = peg$literalExpectation("=", false);
  const peg$c24 = function(name, label, type, expr) {
                      return new ast.ExpressionQuestion(name, label, type, expr, location());
                    };
  const peg$c25 = "||";
  const peg$c26 = peg$literalExpectation("||", false);
  const peg$c27 = function(head, tail) {
        return new ast.OrExpression(head, tail[3], location());
  };
  const peg$c28 = function(v) {
          return v;
        };
  const peg$c29 = "&&";
  const peg$c30 = peg$literalExpectation("&&", false);
  const peg$c31 = function(head, tail) {
        return new ast.AndExpression(head, tail[3], location());
  };
  const peg$c32 = "==";
  const peg$c33 = peg$literalExpectation("==", false);
  const peg$c34 = function(head, tail) {
        return new ast.EqualExpression(head, tail[3], location());
  };
  const peg$c35 = "!=";
  const peg$c36 = peg$literalExpectation("!=", false);
  const peg$c37 = function(head, tail) {
        return new ast.UnequalExpression(head, tail[3], location());
  };
  const peg$c38 = ">";
  const peg$c39 = peg$literalExpectation(">", false);
  const peg$c40 = function(head, tail) {
        return new ast.GreaterThanExpression(head, tail[3], location());
  };
  const peg$c41 = ">=";
  const peg$c42 = peg$literalExpectation(">=", false);
  const peg$c43 = function(head, tail) {
        return new ast.GreaterThanEqualExpression(head, tail[3], location());
  };
  const peg$c44 = "<";
  const peg$c45 = peg$literalExpectation("<", false);
  const peg$c46 = function(head, tail) {
        return new ast.LessThanExpression(head, tail[3], location());
  };
  const peg$c47 = "<=";
  const peg$c48 = peg$literalExpectation("<=", false);
  const peg$c49 = function(head, tail) {
        return new ast.LessThanEqualExpression(head, tail[3], location());
  };
  const peg$c50 = "+";
  const peg$c51 = peg$literalExpectation("+", false);
  const peg$c52 = function(head, tail) {
        return new ast.AddExpression(head, tail[3], location());
  };
  const peg$c53 = "-";
  const peg$c54 = peg$literalExpectation("-", false);
  const peg$c55 = function(head, tail) {
        return new ast.SubtractExpression(head, tail[3], location());
  };
  const peg$c56 = "*";
  const peg$c57 = peg$literalExpectation("*", false);
  const peg$c58 = function(head, tail) {
        return new ast.MultiplyExpression(head, tail[3], location());
  };
  const peg$c59 = "/";
  const peg$c60 = peg$literalExpectation("/", false);
  const peg$c61 = function(head, tail) {
        return new ast.DivideExpression(head, tail[3], location());
  };
  const peg$c62 = function(head) {
        return new ast.NegativeExpression(head[3], location());
  };
  const peg$c63 = "!";
  const peg$c64 = peg$literalExpectation("!", false);
  const peg$c65 = function(head) {
        return new ast.NegateExpression(head[3], location());
  };
  const peg$c66 = function(expr) { return expr; };
  const peg$c67 = function() {return text();};
  const peg$c68 = /^[ \t\n\r]/;
  const peg$c69 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  const peg$c70 = function() { return; };
  const peg$c71 = /^[a-zA-Z0-9]/;
  const peg$c72 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"]], false, false);
  const peg$c73 = /^[a-zA-Z0-9 +\-\/*><=]/;
  const peg$c74 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], " ", "+", "-", "/", "*", ">", "<", "="], false, false);
  const peg$c75 = /^[0-9]/;
  const peg$c76 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c77 = function() { return new ast.NumberLiteral(parseInt(text(), 10), location()); };
  const peg$c78 = "true";
  const peg$c79 = peg$literalExpectation("true", false);
  const peg$c80 = function() { return new ast.BooleanLiteral(true, location()); };
  const peg$c81 = "false";
  const peg$c82 = peg$literalExpectation("false", false);
  const peg$c83 = function() { return new ast.BooleanLiteral(false, location()); };
  const peg$c84 = function(day, month, year) {
    const javascriptMonth = parseInt(month[0] + month[1], 10)-1;
    return new ast.DateLiteral(new Date(Date.UTC(year[0] + year[1] + year[2] + year[3],
      javascriptMonth, day[0] + day[1], 0, 0, 0, 0)), location());
  };
  const peg$c85 = function(val) { return new ast.StringLiteral(val, location()); };
  const peg$c86 = function(val) { return new ast.Variable(val, location()); };
  const peg$c87 = /^[a-zA-Z0-9:?\\\/.,;!]/;
  const peg$c88 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], ":", "?", "\\", "/", ".", ",", ";", "!"], false, false);
  const peg$c89 = "//";
  const peg$c90 = peg$literalExpectation("//", false);
  const peg$c91 = peg$anyExpectation();
  const peg$c92 = "\n";
  const peg$c93 = peg$literalExpectation("\n", false);
  const peg$c94 = "\r\n";
  const peg$c95 = peg$literalExpectation("\r\n", false);
  const peg$c96 = "\r";
  const peg$c97 = peg$literalExpectation("\r", false);
  const peg$c98 = "\u2028";
  const peg$c99 = peg$literalExpectation("\u2028", false);
  const peg$c100 = "\u2029";
  const peg$c101 = peg$literalExpectation("\u2029", false);
  const peg$c102 = "boolean";
  const peg$c103 = peg$literalExpectation("boolean", false);
  const peg$c104 = function() { return new ast.BooleanQuestionType(); };
  const peg$c105 = "string";
  const peg$c106 = peg$literalExpectation("string", false);
  const peg$c107 = function() { return new ast.StringQuestionType(); };
  const peg$c108 = "integer";
  const peg$c109 = peg$literalExpectation("integer", false);
  const peg$c110 = function() { return new ast.IntQuestionType(); };
  const peg$c111 = "date";
  const peg$c112 = peg$literalExpectation("date", false);
  const peg$c113 = function() { return new ast.DateQuestionType(); };

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: any[] = [];
  let peg$silentFails = 0;

  const peg$resultsCache = {};

  let peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location1?) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean) {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase: boolean) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message, location1) {
    return new SyntaxError(message, "", "", location1);
  }

  function peg$buildStructuredError(expected1, found, location1) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parseform() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15;

    const key = peg$currPos * 40 + 0;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parsewhitespace();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsecomment();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsecomment();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsewhitespace();
        if (s3 !== peg$FAILED) {
          if (input.substr(peg$currPos, 4) === peg$c0) {
            s4 = peg$c0;
            peg$currPos += 4;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c1); }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parsewhitespace();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseidentifier();
              if (s6 !== peg$FAILED) {
                s7 = peg$parsewhitespace();
                if (s7 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 123) {
                    s8 = peg$c2;
                    peg$currPos++;
                  } else {
                    s8 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c3); }
                  }
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parsewhitespace();
                    if (s9 !== peg$FAILED) {
                      s10 = [];
                      s11 = peg$parsestatement();
                      while (s11 !== peg$FAILED) {
                        s10.push(s11);
                        s11 = peg$parsestatement();
                      }
                      if (s10 !== peg$FAILED) {
                        s11 = peg$parsewhitespace();
                        if (s11 !== peg$FAILED) {
                          s12 = [];
                          s13 = peg$parsecomment();
                          while (s13 !== peg$FAILED) {
                            s12.push(s13);
                            s13 = peg$parsecomment();
                          }
                          if (s12 !== peg$FAILED) {
                            s13 = peg$parsewhitespace();
                            if (s13 !== peg$FAILED) {
                              if (input.charCodeAt(peg$currPos) === 125) {
                                s14 = peg$c4;
                                peg$currPos++;
                              } else {
                                s14 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$c5); }
                              }
                              if (s14 !== peg$FAILED) {
                                s15 = peg$parsewhitespace();
                                if (s15 !== peg$FAILED) {
                                  peg$savedPos = s0;
                                  s1 = peg$c6(s6, s10);
                                  s0 = s1;
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsestatement() {
    let s0;

    const key = peg$currPos * 40 + 1;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$parseexpressionQuestion();
    if (s0 === peg$FAILED) {
      s0 = peg$parsequestion();
      if (s0 === peg$FAILED) {
        s0 = peg$parseifElseStatement();
        if (s0 === peg$FAILED) {
          s0 = peg$parseifStatement();
        }
      }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseifStatement() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17, s18, s19, s20;

    const key = peg$currPos * 40 + 2;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parsewhitespace();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsecomment();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsecomment();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsewhitespace();
        if (s3 !== peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c7) {
            s4 = peg$c7;
            peg$currPos += 2;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c8); }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parsewhitespace();
            if (s5 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 40) {
                s6 = peg$c9;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c10); }
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parsewhitespace();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parseorExpression();
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parsewhitespace();
                    if (s9 !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 41) {
                        s10 = peg$c11;
                        peg$currPos++;
                      } else {
                        s10 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c12); }
                      }
                      if (s10 !== peg$FAILED) {
                        s11 = peg$parsewhitespace();
                        if (s11 !== peg$FAILED) {
                          if (input.charCodeAt(peg$currPos) === 123) {
                            s12 = peg$c2;
                            peg$currPos++;
                          } else {
                            s12 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c3); }
                          }
                          if (s12 !== peg$FAILED) {
                            s13 = peg$parsewhitespace();
                            if (s13 !== peg$FAILED) {
                              s14 = [];
                              s15 = peg$parsestatement();
                              while (s15 !== peg$FAILED) {
                                s14.push(s15);
                                s15 = peg$parsestatement();
                              }
                              if (s14 !== peg$FAILED) {
                                s15 = peg$parsewhitespace();
                                if (s15 !== peg$FAILED) {
                                  s16 = peg$parsewhitespace();
                                  if (s16 !== peg$FAILED) {
                                    s17 = [];
                                    s18 = peg$parsecomment();
                                    while (s18 !== peg$FAILED) {
                                      s17.push(s18);
                                      s18 = peg$parsecomment();
                                    }
                                    if (s17 !== peg$FAILED) {
                                      s18 = peg$parsewhitespace();
                                      if (s18 !== peg$FAILED) {
                                        if (input.charCodeAt(peg$currPos) === 125) {
                                          s19 = peg$c4;
                                          peg$currPos++;
                                        } else {
                                          s19 = peg$FAILED;
                                          if (peg$silentFails === 0) { peg$fail(peg$c5); }
                                        }
                                        if (s19 !== peg$FAILED) {
                                          s20 = peg$parsewhitespace();
                                          if (s20 !== peg$FAILED) {
                                            peg$savedPos = s0;
                                            s1 = peg$c13(s8, s14);
                                            s0 = s1;
                                          } else {
                                            peg$currPos = s0;
                                            s0 = peg$FAILED;
                                          }
                                        } else {
                                          peg$currPos = s0;
                                          s0 = peg$FAILED;
                                        }
                                      } else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                      }
                                    } else {
                                      peg$currPos = s0;
                                      s0 = peg$FAILED;
                                    }
                                  } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                  }
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseifElseStatement() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17, s18, s19, s20, s21, s22, s23, s24, s25, s26, s27, s28, s29, s30;

    const key = peg$currPos * 40 + 3;
    const cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
